css/forums.css
/* pagination */

.pagination {
    margin: 1rem 0 2rem;
    list-style-type: none;
    font-size: 0;
    text-align: center;
}

.pagination li {
    display: inline-block;
    margin: 0 1px;
    font-size: 1rem;
}

.pagination li.elision {
    padding: 0.6rem;
}

.pagination li a {
    display: inline-block;
    border: 1px solid #096AC9;
    background-color: white;
    padding: 0.6rem 0.8rem;
    color: #096AC9;
    text-decoration: none;
}

.pagination li:first-child a {
    border-radius: 3px 0 0 3px;
}

.pagination li:last-child a {
    border-radius: 0 3px 3px 0;
}

.pagination li a:hover {
    background-color: #D5E8FF;
}

.pagination li.selected a,
.pagination li.selected a:hover {
    background-color: #096AC9;
    color: white;
    font-weight: bold;
}

/* forum list */

.forum {
    width: 100%;
    margin: 2rem 0 3rem;
    border-collapse: collapse;
}

.forum tr {
    background-color: white;
}

.forum th:first-child {
    border-radius: 2px 0 0 0;
}

.forum th:last-child {
    border-radius: 0 2px 0 0;
}

.forum th {
    background-color: #096AC9;
    padding: 0.2rem 1rem;
    color: white;
    font-weight: normal;
}

.forum td {
    padding: 0.5rem 0.2rem;
}

.forum td {
    border-bottom: 1px solid #CCCCCC;
}

.forum-category .category-name {
    text-align: left;
}

.forum .status {
    width: 3rem;
    text-align: center;
    font-weight: bold;
    line-height: 1rem;
}

.forum .status .new {
    color: #FF6528;
}

.forum .status .closed {
    color: #666666;
}

.forum .num-threads,
.forum .num-posts {
    width: 5rem;
    text-align: center;
}

.forum .last-post {
    width: 10rem;
    text-align: center;
}

.forum h3 {
    margin: 0;
}

.forum p {
    margin: 0;
    font-size: 0.9rem;
}

/* thread list */

.thread-list .thread {
    text-align: left;
}

.thread-list .num-replies,
.thread-list .num-views {
    width: 5rem;
    text-align: center;
}

.thread-list h3 {
    font-size: 1rem;
}

.thread-list .last.sticky {
    border-bottom: 3px solid #AAAAAA;
}

/* thread */

.post {
    background-color: white;
    border-bottom: 1px solid #CCCCCC;
    padding: 1rem 1rem 2.5rem 0;
}

.post:nth-child(even) {
    background-color: #F8F8F8;
}

.post .sidebar {
    float: left;
    width: 10rem;
    text-align: center;
}

.post .sidebar h3 {
    margin: 0;
    font-size: 1rem;
}

.post .sidebar p {
    margin: 0;
    font-size: 0.8rem;
}

.post .sidebar p.powerlevel {
    font-weight: bold;
}

.post .status {
    font-weight: bold;
    color: #FF6528;
}

.avatar {
    margin-top: 0.3rem;
}

.post .content {
    padding-left: 11rem;
}

.post .signature {
    margin-top: 2rem;
    border-top: 1px solid #888888;
    padding-top: 0.5rem;
    color: #666666;
    font-size: 0.9rem;
}

.topbar {
    font-size: 0.8rem;
    color: gray;
    margin-top: 0;
    margin-bottom: 0.3rem;
}

